figue/tests/integration/snapshots/main__integration__ariadne__ariadne_unexpected_positional.snap
---
source: tests/integration/ariadne.rs
expression: ariadne_output
---
Error: unexpected argument: unexpected
   ╭─[ <cli>:1:1 ]
   │
 1 │ unexpected --name value
   │ ─────┬────  
   │      ╰────── unexpected argument: unexpected
───╯
